--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,7 +24,7 @@ html {
     --background: white;
 	--font: black;
 	--links: #8696b6;
-	--footer: #111827;
+	--footer: #08060f;
 }
 
 
@@ -49,7 +49,6 @@ body {
 
 
 
-
 /* Header */
 header {
     background-color: #dbe5fa;
@@ -60,14 +59,23 @@ header {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem 2rem;
+    padding: 1rem 2.4rem;
 }
 
 .header-wrap .brand {
     font-size: 1.8rem;
 }
 
-nav ul {
+
+nav ul{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    gap: 1.8rem;
+    font-size: 1.1rem;
+}
+
+.right-ul {
     display: flex;
     flex-direction: row;
     list-style: none;
@@ -77,10 +85,17 @@ nav ul {
 
 
 
+
+
+
+
+
+
+
 /* Main */
 main {
 	width: 100%;
-    flex-grow: 1;
+    /* flex-grow: 1; */
     /* to scroll main area not the root*/
     /* overflow-y: auto; */
 }
@@ -88,3 +103,106 @@ main {
 
 
 
+
+
+
+
+
+
+
+/* Footer */
+footer {
+    background-color: rgb(24, 29, 39);
+    color: white;
+}
+
+
+footer .footer-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 4rem 0;
+}
+
+.footer-grid .grid-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+footer .footer-brand {
+    font-size: 1.8rem;
+}
+
+.grid-container .footer-heading {
+    margin-bottom: 1rem;
+}
+
+.grid-container .footer-ul {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+}
+
+
+
+/* social icons */
+.social-icons {
+    display: flex;
+    flex-direction: row;
+    gap: 1.2rem;
+}
+
+
+.social-icons .icon-box {
+    border: 2px solid rgb(182, 184, 201);
+    border-radius: 50%;
+    color: white;
+    width: 2.3rem;
+    height: 2.3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 300ms ease-in-out;
+}
+
+.icon-box .icon {
+    font-size: 1.4rem;
+    z-index: 1;
+}
+
+.social-icons .icon-box::before {
+    content: "";
+    width: 2.3rem;
+    height: 2.3rem;
+    position: absolute;
+    background: white;
+    border-radius: 50%;
+    transform: scale(0);
+    transition: transform 150ms ease-in-out;
+}
+
+.social-icons .icon-box:hover,
+.social-icons .icon-box:active {
+    color: black;
+    box-shadow: rgb(255, 255, 255) 0px 5px 30px -6px;
+}
+
+.social-icons .icon-box:hover::before,
+.social-icons .icon-box:active::before {
+    transform: scale(1);
+}
+
+
+
+
+footer .credits-container {
+    text-align: center;
+    padding-bottom: 1rem;
+}
+
+
+.credit {
+    color: #b4b4b4;
+    cursor: pointer;
+    text-decoration: none;
+}
